Add resolve in tsconfig.json

--- a/src/app/domains/info/pages/home/home.component.html
+++ b/src/app/domains/info/pages/home/home.component.html
@@ -7,7 +7,7 @@
 
       <div class="text-center">
         <h2>{{ 'ABOUT_ME' | translate }}</h2>
-        <img src="../../../../../assets/imgs/home/profile.jpg" alt="profile picture" width="256" height="256" class="rounded-circle">
+        <img src="assets/imgs/home/profile.jpg" alt="profile picture" width="256" height="256" class="rounded-circle">
         <p style="text-align: left; margin-top: 10px;">
           {{ 'ABOUT_ME_TEXT_1' | translate:{ years: years.toString() } }}
         </p>
