--- a/src/app/domains/shared/components/footer/footer.component.html
+++ b/src/app/domains/shared/components/footer/footer.component.html
@@ -8,31 +8,31 @@
 
   <div class="text-center social-links">
     <a href="https://linkedin.com/in/ingaamira" target="_blank">
-      <img src="../../../../../assets/icons/linkedin.png" alt="LinkedIn">
+      <img src="assets/icons/linkedin.png" alt="LinkedIn">
     </a>
 
     <a href="https://github.com/IngAamiraDev" target="_blank">
-      <img src="../../../../../assets/icons/github.png" alt="GitHub">
+      <img src="assets/icons/github.png" alt="GitHub">
     </a>
 
     <a href="https://twitter.com/Ingaamira" target="_blank">
-      <img src="../../../../../assets/icons/twitter.png" alt="Twitter">
+      <img src="assets/icons/twitter.png" alt="Twitter">
     </a>
 
     <a href="https://platzi.com/p/IngAamira/" target="_blank">
-      <img src="../../../../../assets/icons/platzi.png" alt="Platzi">
+      <img src="assets/icons/platzi.png" alt="Platzi">
     </a>
 
     <a href="https://www.udemy.com/user/andres-mira/" target="_blank">
-      <img src="../../../../../assets/icons/udemy.png" alt="Udemy">
+      <img src="assets/icons/udemy.png" alt="Udemy">
     </a>
 
     <a href="https://ingaamira.github.io/" target="_blank">
-      <img src="../../../../../assets/icons/web-site.png" alt="Website">
+      <img src="assets/icons/web-site.png" alt="Website">
     </a>
 
     <a href="mailto:andres.mira@outlook.com" target="_blank">
-      <img src="../../../../../assets/icons/e-mail.png" alt="Email">
+      <img src="assets/icons/e-mail.png" alt="Email">
     </a>
   </div>
 
