--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -3,12 +3,12 @@
   <div class="language-selector bottom-right">
     <button (click)="changeLanguage('en')">
       <a>
-        <img src="../../../../../assets/icons/usa.png" alt="English">
+        <img src="assets/icons/usa.png" alt="English">
       </a>
     </button>
     <button (click)="changeLanguage('es')">
       <a>
-        <img src="../../../../../assets/icons/spain.png" alt="Spanish">
+        <img src="assets/icons/spain.png" alt="Spanish">
       </a>
     </button>
   </div>
