Update routing. Add translate in Name. Update CV Data en. Update index app

--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -13,7 +13,7 @@
     </button>
   </div>
 
-  <h1>Andres Alfonso Mira Mejia</h1>
+  <h1> {{ 'NAME' | translate }} </h1>
   <h3> {{ 'TITLE' | translate }} </h3>
 
 </div>
