--- a/src/app/domains/info/pages/resume/resume.component.html
+++ b/src/app/domains/info/pages/resume/resume.component.html
@@ -1,359 +1,1 @@
-<div class="container text-center">
-
-  <div class="nav-box">
-    <button (click)="DownloadFileDev()" class="btn btn-primary mb-5 shadow border">{{ 'DOWNLOAD_PDF_RESUME_DEV' | translate }}</button>
-    <button (click)="DownloadFileData()" class="btn btn-primary mb-5 shadow border">{{ 'DOWNLOAD_PDF_RESUME_DATA' | translate }}</button>
-  </div>
-
-  <div class="pb-2">
-    <accordion [isAnimated]="true" class="shadow">
-
-      <accordion-group [(isOpen)]="isWorkExperienceOpen">
-        <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
-          <div style="visibility: hidden;">></div>
-          <div class="btn-link">
-            <h4>{{ 'WORK' | translate }}</h4>
-          </div>
-
-          <div style="width: 10.95px;">
-            <div *ngIf="!isWorkExperienceOpen" style="color: white;">></div>
-            <div *ngIf="isWorkExperienceOpen" style="color: white;">v</div>
-          </div>
-        </button>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'IAS_JOB_1' | translate }}</h2>
-          <h3 class="mb-0">IAS Software</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 07/2023 - ({{ 'PRESENT' | translate }})</h4>
-          <ul>
-            <li>{{ 'IAS_SD_OBJECTIVE_1' | translate }}</li>
-            <li>{{ 'IAS_SD_OBJECTIVE_2' | translate }}</li>
-            <li>{{ 'IAS_SD_OBJECTIVE_3' | translate }}</li>
-            <li>{{ 'IAS_SD_OBJECTIVE_4' | translate }}</li>
-            <li>{{ 'IAS_SD_OBJECTIVE_5' | translate }}</li>
-            <li>{{ 'IAS_SD_OBJECTIVE_6' | translate }}</li>
-            <li>{{ 'IAS_SD_OBJECTIVE_7' | translate }}</li>
-            <li>{{ 'IAS_SD_OBJECTIVE_8' | translate }}</li>
-          </ul>
-        </div>
-
-        <hr/>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'IAS_JOB_2' | translate }}</h2>
-          <h3 class="mb-0">IAS Software</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 12/2022 - 06/2023</h4>
-          <ul>
-            <li>{{ 'IAS_DWH_OBJECTIVE_1' | translate }}</li>
-            <li>{{ 'IAS_DWH_OBJECTIVE_2' | translate }}</li>
-            <li>{{ 'IAS_DWH_OBJECTIVE_3' | translate }}</li>
-            <li>{{ 'IAS_DWH_OBJECTIVE_4' | translate }}</li>
-          </ul>
-        </div>
-
-        <hr/>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'AVALON_JOB' | translate }}</h2>
-          <h3 class="mb-0">Avalon Group</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 06/2022 - 11/2022</h4>
-          <ul>
-            <li>{{ 'AVALON_OBJECTIVE_1' | translate }}</li>
-            <li>{{ 'AVALON_OBJECTIVE_2' | translate }}</li>
-            <li>{{ 'AVALON_OBJECTIVE_3' | translate }}</li>
-            <li>{{ 'AVALON_OBJECTIVE_4' | translate }}</li>
-          </ul>
-        </div>
-
-        <hr/>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'EMTELCO_JOB_1' | translate }}</h2>
-          <h3 class="mb-0">Emtelco CX & BPO</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 03/2021 - 06/2022</h4>
-          <ul>
-            <li>{{ 'EMTELCO_BI_OBJECTIVE_1' | translate }}</li>
-            <li>{{ 'EMTELCO_BI_OBJECTIVE_2' | translate }}</li>
-            <li>{{ 'EMTELCO_BI_OBJECTIVE_3' | translate }}</li>
-            <li>{{ 'EMTELCO_BI_OBJECTIVE_4' | translate }}</li>
-          </ul>
-        </div>
-
-        <hr/>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'ULTRACOM_JOB' | translate }}</h2>
-          <h3 class="mb-0">Ultracom IT S.A.S</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 12/2019 - 03/2021</h4>
-          <ul>
-            <li>{{ 'ULTRACOM_OBJECTIVE_1' | translate }}</li>
-            <li>{{ 'ULTRACOM_OBJECTIVE_2' | translate }}</li>
-            <li>{{ 'ULTRACOM_OBJECTIVE_3' | translate }}</li>
-            <li>{{ 'ULTRACOM_OBJECTIVE_4' | translate }}</li>
-          </ul>
-        </div>
-
-        <hr/>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'EMTELCO_JOB_2' | translate }}</h2>
-          <h3 class="mb-0">Emtelco CX & BPO</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 12/2011 - 11/2019</h4>
-          <ul>
-            <li>{{ 'EMTELCO_PyC_OBJECTIVE_1' | translate }}</li>
-            <li>{{ 'EMTELCO_PyC_OBJECTIVE_2' | translate }}</li>
-            <li>{{ 'EMTELCO_PyC_OBJECTIVE_3' | translate }}</li>
-            <li>{{ 'EMTELCO_PyC_OBJECTIVE_4' | translate }}</li>
-            <li>{{ 'EMTELCO_PyC_OBJECTIVE_5' | translate }}</li>
-          </ul>
-        </div>
-
-      </accordion-group>
-
-      <accordion-group [(isOpen)]="isSectorExperienceOpen">
-        <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
-          <div style="visibility: hidden;">></div>
-          <div class="btn-link">
-            <h4>{{ 'SECTOR' | translate }}</h4>
-          </div>
-
-          <div style="width: 10.95px;">
-            <div *ngIf="!isSectorExperienceOpen" style="color: white;">></div>
-            <div *ngIf="isSectorExperienceOpen" style="color: white;">v</div>
-          </div>
-        </button>
-
-        <div style="text-align: left;">
-          <ul>
-            <li>{{ 'SECTOR_INFO_1' | translate }}</li>
-            <li>{{ 'SECTOR_INFO_2' | translate }}</li>
-            <li>{{ 'SECTOR_INFO_3' | translate }}</li>
-            <li>{{ 'SECTOR_INFO_4' | translate }}</li>
-            <li>{{ 'SECTOR_INFO_5' | translate }}</li>
-            <li>{{ 'SECTOR_INFO_6' | translate }}</li>
-          </ul>
-        </div>
-      </accordion-group>
-
-      <accordion-group [(isOpen)]="isSkillsDeOpen">
-        <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
-          <div style="visibility: hidden;">></div>
-          <div class="btn-link">
-            <h4>{{ 'SKILLS_DATA' | translate }}</h4>
-          </div>
-
-          <div style="width: 10.95px;">
-            <div *ngIf="!isSkillsDeOpen" style="color: white;">></div>
-            <div *ngIf="isSkillsDeOpen" style="color: white;">v</div>
-          </div>
-        </button>
-
-        <div class="row" style="text-align: left">
-          <div class="col">
-            <h3>{{ 'DATA_EXTRACTION_TOOLS' | translate }}:</h3>
-            <ul>
-              <li>APIs</li>
-              <li>{{ 'WEB_PAGES' | translate }}</li>
-              <li>{{ 'FILES' | translate }}</li>
-              <li>{{ 'DATABASES' | translate }}</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'DATA_TRANSFORMATION_TOOLS' | translate }}:</h3>
-            <ul>
-              <li>Python</li>
-              <li>R</li>
-              <li>Java</li>
-              <li>SQL</li>
-              <li>SQL Server Integration Services (SSIS)</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'DATA_LOADING_TOOLS' | translate }}:</h3>
-            <ul>
-              <li>{{ 'DATA_WAREHOUSE' | translate }}</li>
-              <li>Data Mart</li>
-              <li>{{ 'DATA_LAKE' | translate }}</li>
-              <li>Amazon Redshift</li>
-              <li>{{ 'SQL_NOSQL' | translate }}</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'DATA_ANALYSIS_TOOLS' | translate }}:</h3>
-            <ul>
-              <li>SQL Server Analysis Services (SSAS)</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'DATA_VISUALIZATION_TOOLS' | translate }}:</h3>
-            <ul>
-              <li>Power BI</li>
-              <li>Excel</li>
-              <li>Matplotlib</li>
-              <li>Html</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'DATA_REPORTING_TOOLS' | translate }}:</h3>
-            <ul>
-              <li>Power BI</li>
-              <li>SQL Server Reporting Services (SSRS)</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'OTHER_SKILLS' | translate }}:</h3>
-            <ul>
-              <li>{{ 'BI_TOOLS' | translate }}</li>
-              <li>Git</li>
-              <li>DevOps</li>
-              <li>DataOps</li>
-              <li>ETL</li>
-              <li>KPI</li>
-              <li>PL/SQL</li>
-              <li>{{ 'OLAP' | translate }}</li>
-              <li>{{ 'AGILE' | translate }}</li>
-            </ul>
-          </div>
-
-        </div>
-      </accordion-group>
-
-      <accordion-group [(isOpen)]="isSkillsSdOpen">
-        <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
-          <div style="visibility: hidden;">></div>
-          <div class="btn-link">
-            <h4>{{ 'SKILLS_DEV' | translate }}</h4>
-          </div>
-
-          <div style="width: 10.95px;">
-            <div *ngIf="!isSkillsSdOpen" style="color: white;">></div>
-            <div *ngIf="isSkillsSdOpen" style="color: white;">v</div>
-          </div>
-        </button>
-
-        <div class="row" style="text-align: left">
-          <div class="col">
-            <h3>{{ 'PROGRAMING_LANGUAGES' | translate }}:</h3>
-            <ul>
-              <li>Java</li>
-              <li>Python</li>
-              <li>JavaScript</li>
-              <li>TypeScript</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>Frameworks:</h3>
-            <ul>
-              <li>Spring</li>
-              <li>Angular</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'DATABASE' | translate }}:</h3>
-            <ul>
-              <li>PostgreSQL</li>
-              <li>SQL Server</li>
-              <li>Oracle</li>
-              <li>MySQL</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'CLOUD_COMPUTING' | translate }}:</h3>
-            <ul>
-              <li>Azure</li>
-              <li>AWS</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'TESTING' | translate }}:</h3>
-            <ul>
-              <li>{{ 'UNIT_TEST' | translate }}</li>
-              <li>{{ 'INTEGRATION_TEST' | translate }}</li>
-              <li>{{ 'PERFORMANCE_TEST' | translate }}</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <h3>{{ 'OTHER_SKILLS' | translate }}:</h3>
-            <ul>
-              <li>Git</li>
-              <li>{{ 'CLEAN_ARCHITECTURE' | translate }}</li>
-              <li>{{ 'CLEAN_CODE' | translate }}</li>
-              <li>SOLID</li>
-              <li>API Rest</li>
-              <li>Gradle</li>
-              <li>Maven</li>
-              <li>{{ 'DOM' | translate }}</li>
-              <li>DevOps</li>
-              <li>{{ 'AGILE' | translate }}</li>
-            </ul>
-          </div>
-
-        </div>
-      </accordion-group>
-
-      <accordion-group [(isOpen)]="isEducationOpen">
-        <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
-          <div style="visibility: hidden;">></div>
-          <div class="btn-link">
-            <h4>{{ 'EDUCATION' | translate }}</h4>
-          </div>
-
-          <div style="width: 10.95px;">
-            <div *ngIf="!isEducationOpen" style="color: white;">></div>
-            <div *ngIf="isEducationOpen" style="color: white;">v</div>
-          </div>
-        </button>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'UNIVERSITY_TITLE_1' | translate }}</h2>
-          <h3 class="mb-0">{{ 'UNIVERSITY_NAME' | translate }}</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 07/2018 - 08/2019</h4>
-        </div>
-
-        <hr/>
-
-        <div style="text-align: left;">
-          <h2 class="text-primary">{{ 'UNIVERSITY_TITLE_2' | translate }}</h2>
-          <h3 class="mb-0">{{ 'UNIVERSITY_NAME' | translate }}</h3>
-          <h4 class="text-secondary">{{ 'DATE' | translate }}: 12/2014 - 11/2017</h4>
-        </div>
-
-      </accordion-group>
-
-      <accordion-group [(isOpen)]="isLanguagesOpen">
-        <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
-          <div style="visibility: hidden;">></div>
-          <div class="btn-link">
-            <h4>{{ 'LANGUAGES' | translate }}</h4>
-          </div>
-
-          <div style="width: 10.95px;">
-            <div *ngIf="!isLanguagesOpen" style="color: white;">></div>
-            <div *ngIf="isLanguagesOpen" style="color: white;">v</div>
-          </div>
-        </button>
-
-        <div style="text-align: left;">
-          <ul>
-            <li><strong>{{ 'SPANISH' | translate }}:</strong> {{ 'SPANISH_PROFICIENCY' | translate }}</li>
-            <li><strong>{{ 'ENGLISH' | translate }}:</strong> {{ 'ENGLISH_PROFICIENCY' | translate }}</li>
-          </ul>
-        </div>
-
-      </accordion-group>
-
-    </accordion>
-  </div>
-</div>
+<p>resume works!</p>
