--- a/src/app/domains/shared/components/layout/layout.component.html
+++ b/src/app/domains/shared/components/layout/layout.component.html
@@ -1,8 +1,1 @@
-<div class="container mx-auto">
-
-  <app-header />
-  <app-navbar />
-  <router-outlet />
-  <app-footer />
-
-</div>
+<p>layout works!</p>
