--- a/src/app/domains/shared/components/navbar/navbar.component.html
+++ b/src/app/domains/shared/components/navbar/navbar.component.html
@@ -1,43 +1,1 @@
-<div class="nav-box">
-
-  <div class="nav-item" tabindex="0">
-    <a
-      [routerLink]="'/'"
-      [routerLinkActive]="'active-link'"
-      [routerLinkActiveOptions]="{ exact: true }"
-      class="block navigation-link"
-      aria-current="page"
-    >{{ 'HOME' | translate }}</a>
-  </div>
-
-  <div class="nav-item" tabindex="0">
-    <a
-      [routerLink]="'/portfolio'"
-      [routerLinkActive]="'active-link'"
-      [routerLinkActiveOptions]="{ exact: true }"
-      class="block navigation-link"
-      aria-current="page"
-    >{{ 'PORTFOLIO' | translate }}</a>
-  </div>
-
-  <div class="nav-item" tabindex="0">
-    <a
-      [routerLink]="'/resume'"
-      [routerLinkActive]="'active-link'"
-      [routerLinkActiveOptions]="{ exact: true }"
-      class="block navigation-link"
-      aria-current="page"
-    >{{ 'RESUME' | translate }}</a>
-  </div>
-
-  <div class="nav-item" tabindex="0">
-    <a
-      [routerLink]="'/contact'"
-      [routerLinkActive]="'active-link'"
-      [routerLinkActiveOptions]="{ exact: true }"
-      class="block navigation-link"
-      aria-current="page"
-    >{{ 'CONTACT' | translate }}</a>
-  </div>
-
-</div>
+<p>navbar works!</p>
