--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="header">
+
+  <h1> Andres </h1>
+  <h3> Software Developer </h3>
+
+  <div class="language-selector bottom-right">
+    <button *ngFor="let item of menuItemsHeader()"
+      (click)="item.event()">
+      <img [src]="item.img" [alt]="item.flag" >
+    </button>
+  </div>
+
+</div>
