--- a/src/app/domains/shared/components/layout/layout.component.html
+++ b/src/app/domains/shared/components/layout/layout.component.html
@@ -1,1 +1,8 @@
-<p>layout works!</p>
+<div class="container mx-auto">
+
+  <app-header />
+  <app-navbar />
+  <router-outlet />
+  <app-footer />
+
+</div>
