--- a/src/app/domains/shared/components/navbar/navbar.component.html
+++ b/src/app/domains/shared/components/navbar/navbar.component.html
@@ -1,1 +1,18 @@
-<p>navbar works!</p>
+<!-- Menu Nav-->
+<hr>
+  <div class="d-flex justify-content-center">
+    <a *ngFor="let item of menuItemsHome()"
+      [routerLink]="[item.route]"
+      [routerLinkActive]="'active-link'"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="navigation-link m-2 text-center"
+      aria-current="page">
+      <div>
+        <i class="{{ item.img }}"></i>
+        <p class="d-none d-md-block mt-1 mb-0">{{ item.name }}</p>
+      </div>
+    </a>
+  </div>
+<hr>
+
+
